@@ -1,4 +1,4 @@
-package com.epam;
+package com.epam.facade;
 
 import com.epam.gym.facade.GymFacade;
 import com.epam.gym.model.Trainee;
@@ -107,7 +107,8 @@ class GymFacadeTest {
 
     @Test
     void getAllTrainees_ShouldDelegateToService() {
-        List<Trainee> trainees = Arrays.asList(testTrainee);
+        // Using List.of() instead of Arrays.asList() for creating an immutable list.
+        List<Trainee> trainees = List.of(testTrainee);  // preferred modern Java approach
         when(traineeService.findAll()).thenReturn(trainees);
 
         List<Trainee> result = gymFacade.getAllTrainees();
@@ -115,6 +116,7 @@ class GymFacadeTest {
         assertEquals(1, result.size());
         verify(traineeService).findAll();
     }
+
 
     // Trainer Tests
     @Test
